# fpl-chat-app

./: .gitignore  CLAUDE.md  README.md  fpl-api-schema.md  package-lock.json  package.json  railway.toml  turbo.json
apps/agent-server/: Dockerfile  pyproject.toml  railway.toml
apps/agent-server/migrations/: 001_agent_runs.sql
apps/agent-server/src/fpl_agent/: __init__.py  auth.py  config.py  deps.py  log_config.py  main.py  metrics.py  middleware.py  scheduler.py
apps/agent-server/src/fpl_agent/adapters/: __init__.py  anthropic_to_agui.py
apps/agent-server/src/fpl_agent/agent/: __init__.py  loop.py  mcp_bridge.py
apps/agent-server/src/fpl_agent/api/: agent.py  chat.py  health.py  mcp.py  prompts.py
apps/agent-server/src/fpl_agent/mcp/: __init__.py  models.py  server.py  system_prompt.py  system_prompt_static.md
apps/agent-server/src/fpl_agent/mcp/data/: __init__.py  bootstrap.py  cache.py  fixtures.py  (+1 more)
apps/agent-server/src/fpl_agent/persistence/: __init__.py  runs.py
apps/agent-server/tests/: conftest.py
apps/agent-server/tests/agent/: test_agent_run_endpoint.py  test_anthropic_to_agui.py  test_loop.py  test_mcp_bridge.py
apps/agent-server/tests/api/: test_health.py
apps/agent-server/tests/fixtures/: bootstrap_sample.json  fixtures_sample.json
apps/agent-server/tests/mcp/data/: test_cache.py  test_fpl_client.py
apps/agent-server/tests/mcp/prompts/: conftest.py  test_prompts.py
apps/agent-server/tests/mcp/tools/: conftest.py  test_get_fixtures.py  test_get_players.py  test_get_teams.py
apps/agent-server/tests/persistence/: test_runs.py
(+148 files in other folders)
