[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpl-agent"
version = "0.1.0"
description = "FPL Chat — Python agent server (FastAPI + FastMCP + AG-UI)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "anthropic>=0.39",
    "ag-ui-protocol",
    "apscheduler>=3.10",
    "pydantic>=2",
    "pydantic-settings",
    "httpx>=0.27",
    "redis>=5",
    "structlog>=24",
    "prometheus-client",
    "supabase>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "inline-snapshot",
    "dirty-equals",
    "fakeredis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fpl_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
